[gd_scene load_steps=2 format=3 uid="uid://br08o74mo3s2p"]

[ext_resource type="Script" path="res://Component/Dash/dash_component.gd" id="1_7dpw6"]


[node name="DashComponent" type="Node"]
script = ExtResource("1_7dpw6")

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_dash_duration_timer_timeout"]
